[package]
name = "tea5767"
version = "0.1.0"
authors = ["Nekspire <nekspire@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
bit_field = "0.10.1"

[dev-dependencies]
# tests, benchmarks, examples